--- a/video 2/index.html
+++ b/video 2/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>YouTube</h1>
     <h3>krishpCode</h3>
+    <p style="background-color: blueviolet;">dgfrgfh</p>
     <script src="script.js"></script>
 </body>
 </html>
