--- a/video 3/index.html
+++ b/video 3/index.html
@@ -3,86 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Commercial Website</title>
-    <style>
-        /* Basic CSS for styling */
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        nav {
-            background-color: #444;
-            padding: 10px 0;
-            text-align: center;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 0 15px;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-            padding: 20px;
-        }
-        .main {
-            background-color: #fff;
-            padding: 20px;
-            margin-bottom: 20px;
-        }
-        .footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <title>My Bookmarks Projects</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Our Company</h1>
-    </header>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Products</a>
-        <a href="#">Contact</a>
-    </nav>
-    <div class="container">
-        <section class="main">
-            <h2>Welcome to Our Website</h2>
-            <p>This is a sample commercial website. Replace this content with your own.</p>
-            <p>For example, you can showcase your products or services here.</p>
-        </section>
-        <section class="products">
-            <h2>Our Products</h2>
-            <div class="product">
-                <h3>Product 1</h3>
-                <p>Description of Product 1.</p>
-                <p>Price: $XX.XX</p>
-            </div>
-            <div class="product">
-                <h3>Product 2</h3>
-                <p>Description of Product 2.</p>
-                <p>Price: $XX.XX</p>
-            </div>
-            <!-- Add more products as needed -->
-        </section>
-    </div>
-    <footer class="footer">
-        <p>&copy; 2024 Our Company. All rights reserved.</p>
-    </footer>
+    <h1>Primary Bookmarks</h1>
+    <img src="trains.webp" alt="Train" width="240" height="300">
+    <p><a href="http://google.com">Google</a></p>
+    <p><a href="http://instagram.com">Instagram</a></p>
+    <p><a href="http://facebook.com">FaceBook</a></p>
+    <p><a href="http://codewithharry.com">CodeWithHarry</a></p>
+    <h2>Secondary Bookmarks</h2>
+    <p><a href="http://twitter.com">Twitter</a></p>
+    <p><a href="http://chatgpt.com">ChatGPT</a></p>
+    <h3>List</h3>
+    <ol>
+        <li>Mango</li>
+        <li>Orange</li>
+        <li>Litchi</li>
+      </ol>
+      <ul>
+        <li>Pen</li>
+        <li>Pencil</li>
+        <li>Eraser</li>
+      </ul>
+    <script src="script.js"></script>
 </body>
 </html>
